--- a/src/app/styles/theme.scss
+++ b/src/app/styles/theme.scss
@@ -9,6 +9,7 @@ $text-caption: #949b99;
 $text-highlight: #d5dbd3;
 $text-overline: #ffffff;
 $text-muted: #0b0c0d;
+$text-disabled: #454c4f;
 
 // -- CORES DE FUNDO / DIVS --
 $background-primary: #000000;
@@ -31,6 +32,8 @@ $font-size-heading-lg: clamp(3rem, 4.3vw, 5.2rem); //83px;
 $font-size-heading-md: 55px;
 
 $font-size-muted-xl: clamp(4rem, 18.2vw, 21.875rem); //350px;
+
+$font-size-disabled: clamp(4rem, 7.5vw, 9rem); //144px;
 
 $font-size-subheading: 70px;
 $font-size-overline: 20px;
