adicionando section de cursos, criando componente de titulo de secao, e componente de navbar navigate

--- a/src/components/MovingSentences/MovingSentences.module.scss
+++ b/src/components/MovingSentences/MovingSentences.module.scss
@@ -29,7 +29,7 @@
 .sentence {
   display: inline-block;
   padding-right: 4rem;
-  font-size: $font-size-heading-lg;
+  font-size: $font-size-heading-md;
   text-transform: uppercase;
   color: $text-heading;
 }
