--- a/src/app/styles/theme.scss
+++ b/src/app/styles/theme.scss
@@ -8,6 +8,8 @@ $text-subheading: #f80d5a;
 $text-caption: #949b99;
 $text-highlight: #d5dbd3;
 $text-overline: #ffffff;
+$text-navbarItemActive: #ffffff;
+$text-navbarItem: #8a959b;
 $text-muted: #0b0c0d;
 $text-disabled: #454c4f;
 
@@ -28,17 +30,17 @@ $font-secondary-family: "PT Sans Regular", sans-serif;
 
 // -- FONT SIZES --
 $font-size-heading-xl: clamp(2rem, 5.7vw, 6.875rem); //110px;
-$font-size-heading-lg: clamp(3rem, 4.3vw, 5.2rem); //83px;
-$font-size-heading-md: 55px;
+$font-size-heading-lg: clamp(2rem, 4.8vw, 5.75rem); //92px;
+$font-size-heading-md: clamp(3rem, 4.3vw, 5.2rem); //83px;
+$font-size-heading-sm: 55px;
 
 $font-size-muted-xl: clamp(4rem, 18.2vw, 21.875rem); //350px;
-
 $font-size-disabled: clamp(4rem, 7.5vw, 9rem); //144px;
-
 $font-size-subheading: 70px;
 $font-size-overline: 20px;
 $font-size-highlight: 17px;
+$font-size-navbarItem: clamp(0.875rem, 0.885vw, 1.0625rem); //17px;
 
-$font-size-body-lg: 22px;
+$font-size-body-lg: 1.146vw; //22px;
 $font-size-body-md: 16px;
 $font-size-body-sm: 13px;
