--- a/src/components/NavbarNavigation/NavbarNavigation.module.scss
+++ b/src/components/NavbarNavigation/NavbarNavigation.module.scss
@@ -23,7 +23,7 @@
   transition: width 0.5s ease;
 }
 
-.navItem:hover .bar {
+.navItem.active .bar {
   width: 30%;
 }
 
@@ -35,6 +35,7 @@
   transition: color 0.4s ease-out;
 }
 
-.navItem:hover .navItemText {
+.navItem:hover .navItemText,
+.navItem.active .navItemText {
   color: $text-navbarItemActive;
 }
