--- a/src/app/styles/theme.scss
+++ b/src/app/styles/theme.scss
@@ -32,15 +32,15 @@ $font-secondary-family: "PT Sans Regular", sans-serif;
 $font-size-heading-xl: clamp(2rem, 5.7vw, 6.875rem); //110px;
 $font-size-heading-lg: clamp(2rem, 4.8vw, 5.75rem); //92px;
 $font-size-heading-md: clamp(3rem, 4.3vw, 5.2rem); //83px;
-$font-size-heading-sm: 55px;
+$font-size-heading-sm: clamp(2rem, 2.86vw, 3.4375rem); //55px;
 
 $font-size-muted-xl: clamp(4rem, 18.2vw, 21.875rem); //350px;
 $font-size-disabled: clamp(4rem, 7.5vw, 9rem); //144px;
-$font-size-subheading: 70px;
+$font-size-subheading: clamp(2.5rem, 3.65vw, 4.375rem); //70px;
 $font-size-overline: 20px;
 $font-size-highlight: 17px;
 $font-size-navbarItem: clamp(0.875rem, 0.885vw, 1.0625rem); //17px;
 
-$font-size-body-lg: 1.146vw; //22px;
+$font-size-body-lg: clamp(1.125rem, 1.15vw, 1.375rem); //22px;
 $font-size-body-md: 16px;
-$font-size-body-sm: 13px;
+$font-size-body-sm: clamp(0.75rem, 0.68vw, 1rem); //13px;
