--- a/src/modules/Courses/Courses.module.scss
+++ b/src/modules/Courses/Courses.module.scss
@@ -15,3 +15,56 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.topicContainer {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  flex: 1;
+  padding: 105px 0 322px;
+  position: relative;
+  overflow: hidden;
+}
+
+.topicContainer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.disappear::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 60%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  pointer-events: none;
+  transform-origin: top;
+  transform: scaleY(0);
+  animation: growBlack 1s ease-in forwards;
+}
+
+.appear {
+  opacity: 0;
+  animation: fadeIn 0.3s ease-in forwards;
+}
+
+@keyframes growBlack {
+  to {
+    transform: scaleY(1);
+  }
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
