--- a/src/app/styles/theme.scss
+++ b/src/app/styles/theme.scss
@@ -12,16 +12,22 @@ $text-navbarItemActive: #ffffff;
 $text-navbarItem: #8a959b;
 $text-muted: #0b0c0d;
 $text-disabled: #454c4f;
+$text-accordion-trigger-open: #000000;
+$text-accordion-topic-title: #ffffff;
+$text-accordion-topic-description: #8a959b;
 
 // -- CORES DE FUNDO / DIVS --
 $background-primary: #000000;
 $background-navbar: #202121;
+$background-accordion-trigger-open: #f80d5a;
 
 // -- CORES DE BORDAS E DIVISORES --
 $divider: #f80d5a;
 $border-primary: #949b99;
 $border-secondary: #ed145b;
 $border-inverse: #ffffff;
+$border-accordion: #566165;
+$border-accordion-trigger: #f80d5a;
 
 // -- FONTES --
 $font-primary-family: "Gotham HTF Medium", sans-serif;
@@ -31,16 +37,31 @@ $font-secondary-family: "PT Sans Regular", sans-serif;
 // -- FONT SIZES --
 $font-size-heading-xl: clamp(2rem, 5.7vw, 6.875rem); //110px;
 $font-size-heading-lg: clamp(2rem, 4.8vw, 5.75rem); //92px;
+$font-size-heading-lg-mobile: 52px;
 $font-size-heading-md: clamp(3rem, 4.3vw, 5.2rem); //83px;
+$font-size-heading-md-mobile: 35px;
 $font-size-heading-sm: clamp(2rem, 2.86vw, 3.4375rem); //55px;
 
 $font-size-muted-xl: clamp(4rem, 18.2vw, 21.875rem); //350px;
+$font-size-muted-xl-mobile: 105px;
 $font-size-disabled: clamp(4rem, 7.5vw, 9rem); //144px;
 $font-size-subheading: clamp(2.5rem, 3.65vw, 4.375rem); //70px;
-$font-size-overline: 20px;
+$font-size-overline: clamp(14px, 1.04vw, 20px); //20px;
+$font-size-overline-mobile: 20px;
+$font-size-overline-sm-mobile: 15px;
 $font-size-highlight: 17px;
 $font-size-navbarItem: clamp(0.875rem, 0.885vw, 1.0625rem); //17px;
 
 $font-size-body-lg: clamp(1.125rem, 1.15vw, 1.375rem); //22px;
+$font-size-body-lg-mobile: 22px;
 $font-size-body-md: 16px;
 $font-size-body-sm: clamp(0.75rem, 0.68vw, 1rem); //13px;
+
+$font-size-accordion-title: 30px;
+$font-size-accordion-trigger: 37px;
+$font-size-accordion-topic-title: 18px;
+$font-size-accordion-topic-description: 10px;
+
+// -- BREAKPOINTS --
+$break-point-desktop-sm: 1024px;
+$break-point-mobile: 414px;
