--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -25,18 +25,23 @@
 }
 
 .textFirst {
-  animation: aparecer 0.5s ease forwards;
+  animation: appear 0.5s ease forwards;
   z-index: 2;
   position: relative;
 }
 
 .textSecond {
   position: relative;
-  animation: aparecer 0.5s ease forwards;
+  animation: appear 0.5s ease forwards;
   animation-delay: 0.3s;
   margin-left: clamp(-4rem, -3.4vw, -2rem);
   margin-top: clamp(-0.75rem, -0.5vw, -0.5rem);
   z-index: 1;
+
+  @media (max-width: $break-point-mobile) {
+    margin-top: 0;
+    margin-left: -10px;
+  }
 }
 
 .textMuted {
@@ -48,11 +53,23 @@
   position: absolute;
   top: clamp(-8rem, -5vw, -3rem);
   z-index: -1;
-  animation: aparecer 0.5s ease forwards;
+  animation: appear 0.5s ease forwards;
   animation-delay: 0.8s;
+
+  @media (max-width: $break-point-mobile) {
+    font-size: $font-size-muted-xl-mobile;
+    line-height: 107px;
+    text-align: right;
+    vertical-align: middle;
+    top: -97px;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
 }
 
-@keyframes aparecer {
+@keyframes appear {
   from {
     opacity: 0;
     transform: translateY(-10px);
